# vcl_importation

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
import_tracker/: hooks.py  modules.txt  patches.txt
import_tracker/import_tracker/: api.py
import_tracker/import_tracker/doctype/import_shipment/: import_shipment.js  import_shipment.json  import_shipment.py
import_tracker/import_tracker/fixtures/: workspace.json
import_tracker/import_tracker/page/import_dashboard/: import_dashboard.html  import_dashboard.js  import_dashboard.json  import_dashboard.py
import_tracker/import_tracker/page/importation_metrics/: importation_metrics.html  importation_metrics.js  importation_metrics.json  importation_metrics.py
import_tracker/import_tracker/report/delivered_awaiting_supplier_payment/: delivered_awaiting_supplier_payment.json  delivered_awaiting_supplier_payment.py
import_tracker/import_tracker/report/open_shipments_by_stage/: open_shipments_by_stage.json  open_shipments_by_stage.py
import_tracker/import_tracker/report/shipment_lead_times/: shipment_lead_times.json  shipment_lead_times.py
import_tracker/import_tracker/report/unpaid_kra_duties/: unpaid_kra_duties.json  unpaid_kra_duties.py
